fixed topics bg-gradient, changed hero logo alignment, changed footer glow

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -69,23 +69,10 @@ body {
     padding-bottom: 0;
   }
 
-  &_with-bg {
-    position: relative;
-    overflow: hidden;
-
-    &:before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: linear-gradient(to top, var(--bg-color) 0, transparent 25%);
-      z-index: 1;
-    }
-  }
   &_stats {
     padding: 60px 0 40px;
+    position: relative;
+    overflow: hidden;
 
     @include media.md-up {
       padding: 100px 0 60px;
@@ -114,15 +101,27 @@ body {
 
     .section {
       &__bg {
+        height: 100%;
+      }
+      &__bg-img {
+        height: 100%;
+        object-fit: cover;
         object-position: bottom;
       }
     }
   }
   &_topics {
+    position: relative;
+    overflow: hidden;
+
     .section {
       &__bg {
-        @include media.phone-down {
-          object-fit: contain;
+        &:after {
+          background: linear-gradient(
+            to top,
+            var(--bg-color) 0,
+            transparent 100%
+          );
         }
       }
     }
@@ -172,7 +171,6 @@ body {
       }
     }
   }
-
   &__container {
     position: relative;
     z-index: 10;
@@ -195,9 +193,20 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: top;
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(to top, var(--bg-color) 0, transparent 25%);
+      z-index: 1;
+    }
+  }
+  &__bg-img {
+    width: 100%;
   }
 }
 
